# caeles

./: .gitattributes  .gitignore  BUILD_SYSTEM_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  STORAGE_SYSTEM_IMPLEMENTATION.md  TROUBLESHOOTING.md  build_test.bat  quickstart.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
android/poc-host/: README.md
android/poc-host/native/: Cargo.toml
capsules/: registry.json
capsules/audit-capsule/: Cargo.toml  manifest.json
capsules/audit-capsule/src/: lib.rs
capsules/hello-capsule/: Cargo.toml  README.md  manifest.json
capsules/hello-capsule/data/: message.txt
capsules/hello-capsule/src/: lib.rs
capsules/logger-capsule/: Cargo.toml  README.md  manifest.json
capsules/logger-capsule/src/: lib.rs
capsules/metrics-capsule/: Cargo.toml  manifest.json
capsules/metrics-capsule/src/: lib.rs
capsules/network-capsule/: Cargo.toml  manifest.json
crates/caeles-runtime/: Cargo.toml  README.md
crates/caeles-runtime/src/: main.rs  manifest.rs  manifest_test.rs  runtime.rs  state.rs
crates/caeles-runtime/src/backend/: inspector.rs  lifecycle.rs  logs.rs  mod.rs  model.rs  repository.rs  runner.rs  state.rs  storage.rs  tasks.rs
crates/caeles-runtime/tests/: cli_integration.rs
crates/caeles-runtime/tests/fixtures/: network_socket.wat  no_memory.wat  readonly_write.wat
crates/caeles-sdk/: Cargo.toml  README.md
docs/: BUILD_SYSTEM.md  STORAGE_SYSTEM.md  capsule-definition-of-done-v0.md  security-roadmap-v0.md  technical-decision-target-v0.md
scripts/: run-hello.sh
(+4 files in other folders)
