[package]
name = "caeles-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "caeles"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = "29"
wasmtime-wasi = "29"

[dev-dependencies]
tempfile = "3"
wat = "1"
