[package]
name = "caeles-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
wasmtime = "29"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wat = "1"

[[bin]]
name = "caeles"
path = "src/main.rs"
